--- a/PROJECT/PROJECT/PROJECT/Old_Login.Master
+++ b/PROJECT/PROJECT/PROJECT/Old_Login.Master
@@ -24,18 +24,19 @@
         <div class="login-form">
             <div class="form-container">
                 <h2>Sign Up</h2>
-                <form action="#" method="POST">
+                <form id="form1" runat="server">
                     <!-- Username Input -->
-                    <input type="text" name="username" placeholder="Username" required>
-                    <!-- Password Input -->
+                    &nbsp;<!-- Password Input -->
                    
-                    <input type="password" name="password" placeholder="Password" required>
-                    <input type="email" name="Email" placeholder="Email" required>
-                    <!-- Submit Button -->
-                    <button type="submit">
-                        <a  href="index.aspx">Sign Up</a>
-                    </button>e
-                    <a href="create-account.html">Don't have an account? </a>
+                    <asp:TextBox ID="txtbx_username" runat="server" ></asp:TextBox>
+                    <asp:TextBox ID="txtbx_password" runat="server" ></asp:TextBox>
+                    <asp:TextBox ID="txtbx_email" runat="server" ></asp:TextBox>
+&nbsp;<!-- Submit Button --><asp:DropDownList ID="ddlist_gender" runat="server">
+                        <asp:ListItem>Male</asp:ListItem>
+                        <asp:ListItem>Female</asp:ListItem>
+                        <asp:ListItem>Other</asp:ListItem>
+                    </asp:DropDownList>
+                    <asp:Button ID="btn_signup" runat="server" Text="Sign Up" OnClick="Button1_Click" />
 
                 </form>
                 <a href="#">Forgot your password?</a>
