--- a/PROJECT/PROJECT/PROJECT/Master_Pages/Old_Login.Master
+++ b/PROJECT/PROJECT/PROJECT/Master_Pages/Old_Login.Master
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Diary - Login</title>
-    <link rel="stylesheet" href="login_my.css">
+    <link rel="stylesheet" href="css/login_my.css">
+
 </head>
 <body>
     <div class="login-container">
