--- a/PROJECT/PROJECT/PROJECT/Master_Pages/AppPage.Master
+++ b/PROJECT/PROJECT/PROJECT/Master_Pages/AppPage.Master
@@ -1,6 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="AppPage.Master.cs" Inherits="PROJECT.Site1" %>
 
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,27 +9,25 @@
     <title>MyDiary - Your Personal Journal</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/templatemo-style.css" />
-    <!-- Add custom styles for better responsiveness -->
+    <link rel="stylesheet" href="css -app/all.min.css" />
+    <link rel="stylesheet" href="css -app/bootstrap.min.css" />
+    <link rel="stylesheet" href="css -app/templatemo-style.css" />
+    <link rel="stylesheet" href="css/app.css" />
+
+    <!-- Custom Styles for responsiveness -->
     <link rel="stylesheet" href="css/custom-style.css" />
   </head>
   <body>
-    <div class="parallax-window" data-parallax="scroll" data-image-src="img/home_my.jpg">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="img/background_3000x3000.jpg">
       <div class="container-fluid">
         <!-- Brand Section -->
         <div class="row tm-brand-row">
-  <!-- Adjusted column width for brand section -->
-  <div class="col-lg-3 col-md-4 col-11">
-    <div class="tm-brand-container tm-bg-white-transparent">
-      <i class="fas fa-2x fa-book-open tm-brand-icon"></i>
-      <div class="tm-brand-texts">
-        <h1 class="text-uppercase tm-brand-name">MyDiary</h1>
-        <p class="small">Capture every moment</p>
-      </div>
-    </div>
-  </div>
+          <div class="col-lg-3 col-md-4 col-11">
+            <div class="tm-brand-container tm-bg-white-transparent">
+              <img src="img/logo.png" alt="MyDiary Logo" class="tm-brand-logo img-fluid"> <!-- Logo added -->
+            </div>
+          </div>
+
           <!-- Navigation Section -->
           <div class="col-lg-8 col-1">
             <div class="tm-nav">
@@ -43,35 +40,34 @@
                   <ul class="navbar-nav">
                     <li class="nav-item active">
                       <div class="tm-nav-link-highlight"></div>
+                      <div class="tm-nav-link-highlight"></div>
                       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
+                    
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="journal.aspx">My Journal</a>
+                      <a class="nav-link" href="features.html">Calendar</a>
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="features.html">Features</a>
+                      <a class="nav-link" href="about.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="about.html">About</a>
+                      <a class="nav-link" href="contact.html">Map</a>
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="contact.html">Contact</a>
-                    </li> <li>
-                      <li class="nav-item">
-    <div class="tm-nav-link-highlight"></div>
-    <a class="nav-link" href="profile.html">
-        <img src="img/profile_icon.png" alt="Profile Icon" class="nav-icon"></a>
-</li>
-<li class="nav-item">
-    <div class="tm-nav-link-highlight"></div>
-    <a class="nav-link" href="logout.html">
-        <img src="img/logout_icon.png" alt="Logout Icon" class="nav-icon"></a>
-</li>
-
+                      <a class="nav-link" href="profile.html">
+                          <img src="img/profile_icon.png" alt="Profile Icon" class="nav-icon img-fluid">
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <div class="tm-nav-link-highlight"></div>
+                      <a class="nav-link" href="Home.aspx">
+                          <img src="img/logout_icon.png" alt="Logout Icon" class="nav-icon img-fluid">
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </nav>
@@ -79,19 +75,10 @@
           </div>
         </div>
 
-   
-            <!-- PLACEHOLDER SECTION FOR BODY -->
+        <!-- Placeholder Section for Body -->
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
 
-   <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-
-
-
-
-
-       
-      
-        <!-- Page footer -->
+        <!-- Page Footer -->
         <footer class="row">
           <p class="col-12 text-white text-center tm-copyright-text">
             Copyright &copy; 2024 MyDiary. Designed with <i class="fas fa-heart"></i> for journal enthusiasts.
