--- a/PROJECT/PROJECT/PROJECT/css/login_my.css
+++ b/PROJECT/PROJECT/PROJECT/css/login_my.css
@@ -12,21 +12,24 @@
 
 
 
-
-
 .login-container {
     display: flex;
     flex-direction: row;
-    height: 100vh;
-    background-color: var(--light-brown);
-    background-image: url("C:\Users\mejo_\Documents\GitHub\Web_Project\PROJECT\PROJECT\PROJECT\img\login_wallpaper.jpg");
-}
+    height: auto;
+    background-color: var(--medium-brown);
+    background-size:auto; /* Optional: Make image fit container */
+    background-position: center;
 
+    
+}
 .info {
-    flex: 1;
+    flex: auto;
     padding: 40px;
     background-color: var(--dark-brown);
-    background-image:url("img/login_my.jpg");
+    background-image: url("../img/home_my.jpg"); /* Correct relative path */
+    background-size: contain;
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevent image tiling */
     color: var(--light-brown);
     display: flex;
     flex-direction: column;
@@ -34,7 +37,9 @@
     align-items: center;
     text-align: center;
     box-shadow: 0px 4px 8px var(--light-shadow);
+    height: auto; /* Ensures it fills the parent height */
 }
+
 
     .info h2 {
         font-size: 2.5rem;
