--- a/PROJECT/PROJECT/PROJECT/Master_Pages/Main_w_Login.Master
+++ b/PROJECT/PROJECT/PROJECT/Master_Pages/Main_w_Login.Master
@@ -68,7 +68,7 @@
         <section class="row" id="tmHome">
           <div class="col-12 tm-home-container">
             <div class="text-white tm-home-left">
-              <p class="text-uppercase tm-slogan" >Write. Reflect. Relive.</p>
+              <p class="text-uppercase tm-slogan" >Write. Reflect. Relive. MyDiary</p>
               <hr class="tm-home-hr" />
               <h2 class="tm-home-title">Your Personal Journal, Anywhere</h2>
               <p class="tm-home-text">
