--- a/PROJECT/PROJECT/PROJECT/Master_Pages/Main_w_Login.Master
+++ b/PROJECT/PROJECT/PROJECT/Master_Pages/Main_w_Login.Master
@@ -53,7 +53,7 @@
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="contact.html">Contact</a>
+                      <a class="nav-link" href="Contact.aspx">Contact</a>
                     </li>
                       <li class="nav-item">
   <div class="tm-nav-link-highlight">
