--- a/PROJECT/PROJECT/PROJECT/Master_Pages/Main_w_Login.Master
+++ b/PROJECT/PROJECT/PROJECT/Master_Pages/Main_w_Login.Master
@@ -56,15 +56,15 @@
                       <a class="nav-link" href="Contact.aspx">Contact</a>
                     </li>
                       <li class="nav-item">
-  <div class="tm-nav-link-highlight">
+ <%-- <div class="tm-nav-link-highlight">
       <asp:ImageButton ID="ImageButton1" runat="server" Height="30px" ImageUrl="~/img/profile_icon.png" OnClick="ImageButton1_Click" />
-                          </div>
+                          </div>--%>
   
 </li>
                       <li class="nav-item">
-  <div class="tm-nav-link-highlight">
+  <%--<div class="tm-nav-link-highlight">
       <asp:ImageButton ID="ImageButton2" runat="server" Height="30px" ImageUrl="~/img/logout_icon.png" />
-                          </div>
+                          </div>--%>
 </li>
                   </ul>
                     <p>
